additional format change